Deps and constructors

--- a/Contracts - CompAssign Wordguesser/WordGuesser Console.csproj
+++ b/Contracts - CompAssign Wordguesser/WordGuesser Console.csproj
@@ -45,9 +45,16 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WordGuesser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WordGuesser Logic\WordGuesser Logic.csproj">
+      <Project>{64B4933D-16CB-4A56-AB3E-196AF29FE5E9}</Project>
+      <Name>WordGuesser Logic</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
