--- a/WordGuesser_Mock/WordGuesser_Mock.csproj
+++ b/WordGuesser_Mock/WordGuesser_Mock.csproj
@@ -1,12 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{10DE84CF-D89B-46F1-954C-17EAE9FD3A4A}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>WordGuesser_Test</RootNamespace>
-    <AssemblyName>WordGuesser_Test</AssemblyName>
+    <ProjectGuid>{DB021038-F9C2-472D-A95E-3DEF404B0741}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>WordGuesser_Mock</RootNamespace>
+    <AssemblyName>WordGuesser_Mock</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -25,23 +25,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
+    <Compile Include="MockGuessLogic.cs" />
+    <Compile Include="MockWordLogic.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Test.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\WordGuesser_Mock\WordGuesser_Mock.csproj">
-      <Project>{DB021038-F9C2-472D-A95E-3DEF404B0741}</Project>
-      <Name>WordGuesser_Mock</Name>
+    <ProjectReference Include="..\WordGuesser Logic\WordGuesser Logic.csproj">
+      <Project>{64B4933D-16CB-4A56-AB3E-196AF29FE5E9}</Project>
+      <Name>WordGuesser Logic</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
